crates/swc/tests/tsc-references/assignmentCompatWithObjectMembers5_es2015.1.normal.js
class C {
}
var c;
var i;
c = i; // error
i = c; // error
